--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,7 +56,7 @@ menu > nav > ul > li > a:hover {
 .container-backgorund {
   width: 100%;
   height: 100vh;
-  background-image: url(../imagens/teste.svg);
+  background-image: url(../imagens/sal1.svg);
   background-position:center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -96,7 +96,6 @@ h1 {
 article > section > p {
   padding: 15px 0px;
   font-size: 18px;
-  margin: 0px 10px 0px 10px;
 }
 
 .container-background2{
@@ -111,7 +110,7 @@ article > section > p {
 .the-sal {
   background-color: var(--cor0);
   color: var(--cor5);
-  padding: 85px 0px 40px 0px;
+  padding: 85px 10px 40px 10px;
 }
 
 .the-sal > p {
@@ -126,14 +125,13 @@ article > section > p {
 
 .img-the-sal {
   display: block;
-  margin: auto;
-  width: 94.6%;
+  width: 100%;
   border-radius: 10px;
   }
 
 .the-sal2 {
   background-color: var(--cor0);
   color: var(--cor5);
-  padding: 40px 0px 85px 0px;
+  padding: 0px 10px 85px 10px;
   text-align: justify;
 }
