--- a/estilos/login.css
+++ b/estilos/login.css
@@ -47,6 +47,8 @@ main {
   height: 500px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #f5a6376c; /*#ffffff4b*/
+  transition: width 0.3s , height 0.3s;
+  transition-timing-function: ease;
 }
 
 #imagem {
@@ -60,4 +62,13 @@ main {
 #formulario {
   display: block;
   padding: 10px;
+}
+
+#formulario > h1 {
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+#formulario > p {
+  font-size: 0.8em;
 }
