--- a/estilos/login-media-query.css
+++ b/estilos/login-media-query.css
@@ -17,6 +17,8 @@
   --cor8: #89F378;
 }
 
+ /*tablet*/
+
 @media screen and (min-width: 768px) and (max-width: 992px) {
   #login {
     width: 80vw;
@@ -37,6 +39,8 @@
   }
 }
 
+/* desktop, notebook, tv */
+
 @media screen and (min-width: 992px) {
   #login {
     width: 950px;
@@ -46,10 +50,14 @@
     background: var(--cor1) url(../imagens/sal-login-desktop.svg) no-repeat;
     background-position: left center;
     width: 100%;
-    height: 55%;
+    height: 48%;
   }
 
   #formulario > p {
     font-size: 1.2em;
+  }
+
+  #login {
+    height: 600px;
   }
 }
