--- a/estilos/login.css
+++ b/estilos/login.css
@@ -48,7 +48,7 @@ main {
   overflow: hidden;
   background-color: var(--cor5);
   width: 250px;
-  height: 500px;
+  height: 560px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #ffffff6c; /*#ffffff4b*/ /*#f5a6376c*/
   transition: width 0.3s , height 0.3s;
@@ -64,26 +64,63 @@ main {
 }
 
 #formulario {
+  background-image: linear-gradient(#6f6f6f, #ffffff);
   display: block;
   padding: 10px;
 }
 
 #formulario > h1 {
+  color: var(--cor5);
   text-align: center;
   padding-bottom: 10px;
 }
 
 #formulario > p {
+  color: var(--cor5);
   font-size: 0.8em;
 }
 
 .box-login {
+  background-color: var(--cor2);
+  border: 2px solid var(--cor2);
+  width: 100%;
+  height: 40px;
   display: block;
   margin: 10px 0px;
+  border-radius: 8px;
 }
 
 .box-login > label{
   display: none;
+}
+
+.box-login > span {
+
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+
+.box-login > input {
+  font-size: 1em;
+  width: calc(100% - 44.43px) ;
+  height: 100%;
+  transform: translateY(-14px);
+  border: 0px;
+  border-radius: 8px;
+  padding: 4px;
+}
+
+#ilogin {
+  font-size: 0.9em;
+  border-radius: 5px;
+  padding: 2px;
+}
+
+#isenha {
+  font-size: 0.9em;
+  border-radius: 5px;
+  padding: 2px;
 }
 
 form > input[type=submit]{
@@ -105,10 +142,16 @@ form > input[type=submit]:hover {
 
 form > a.esquecisenha {
   display: block;
-  font-size: 1em;
-  padding-top: 15px;
+  font-size: 0.9em;
+  padding: 15px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 form > a.esquecisenha > span {
   font-size: 0.8em;
+}
+
+#p-cadastro {
+  font-size: 0.9em;
 }
