--- a/estilos/style.css
+++ b/estilos/style.css
@@ -90,7 +90,7 @@ menu > nav > ul > li > a:hover {
 h1 {
   font-family: 'roadrage', sans-serif;
   font-weight: lighter;
-  margin-left: 70px;
+  padding-left: 15.51%;
   font-size: 32px;
 }
 
